# Get-in-my-Cart

./: .env.sample  .gitignore  README.MD  custom_solver.py  getinmycart.py  goodbyecaptcha.yaml  install.bat  kill.bat  pyproject.toml  requirements.txt  rtxscript.py  settings.py  start.bat  tes.py  test.py  test2.py  test3.py
template/: email_template.html
utils/: alerts.py  asyncio.py  email.py  email_template.html  logging.py  random.py  scrape.py
