[tool.poetry]
name = "rtxscript"
version = "0.1.0"
description = "getting my rtx 3080"
authors = ["Daviee"]

[tool.poetry.dependencies]
python = "^3.8"
goodbyecaptcha = "^2.4.2"
emails = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
