[tool.poetry]
name = "rtxscript"
version = "0.1.0"
description = "getting my rtx 3080"
authors = ["Daviee"]

[tool.poetry.dependencies]
python = "^3.8"
goodbyecaptcha = "^2.4.2"
pyaudio = {path = "downloads/PyAudio-0.2.11-cp38-cp38-win_amd64.whl"}

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
